modules/sg/main.tf
resource "aws_security_group" "cloudnorth-sg-jenkins" {
  name        = "cloudnorth-sg-jenkins"
  description = "Security group for Jenkins server"
  vpc_id      = var.vpc_id  # Pass VPC ID as variable

  ingress {
    description = "Allow SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"] # Consider restricting this in production
  }

  ingress {
    description = "Allow HTTP"
    from_port   = 8081
    to_port     = 8081
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1" # All traffic
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name    = "cloudnorth-sg-jenkins"
    Project = "CloudNorth"
  }
}

resource "aws_security_group" "frontend_sg" {
  name        = "cloudnorth-frontend-sg"
  description = "Security group for frontend instances"
  vpc_id      = var.vpc_id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Allow SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]  # Restrict to your IP if possible
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name    = "cloudnorth-frontend-sg"
    Project = "CloudNorth"
  }
}

resource "aws_security_group" "backend_sg" {
  name        = "cloudnorth-backend-sg"
  description = "Security group for backend instances"
  vpc_id      = var.vpc_id

  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"] # Adjust CIDR as needed
  }

  ingress {
    description = "Allow HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]  # Add HTTP access for backend
  }

  ingress {
    description = "Allow SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]  # Restrict to your IP if possible
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name    = "cloudnorth-backend-sg"
    Project = "CloudNorth"
  }
}

resource "aws_security_group" "eks_sg" {
  name        = "cloudnorth-eks-sg"
  description = "Allow EKS and monitoring traffic"
  vpc_id      = var.vpc_id

  # Allow EKS API traffic (typical for K8s)
  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Allow Prometheus NodePort traffic
  ingress {
    from_port   = 31930
    to_port     = 31930
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Allow Grafana NodePort traffic
  ingress {
    from_port   = 31909
    to_port     = 31909
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name    = "cloudnorth-eks-sg"
    Project = "CloudNorth"
  }
}

resource "aws_security_group" "alb_sg" {
  name        = "cloudnorth-alb-sg"
  description = "Allow HTTP inbound traffic to ALB"
  vpc_id      = var.vpc_id

  ingress {
    description = "Allow HTTP from anywhere"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "Allow all outbound"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name    = "cloudnorth-alb-sg"
    Project = "CloudNorth"
  }
}
